--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "run-frontend",
-  "version": "0.1.0",
+  "name": "run",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "font-awesome": "^4.7.0",
@@ -27,6 +27,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {}
+  }
 }
